<resources>
    <string name="app_name">Behance-Aos</string>
    <string name="behance_read_home">홈</string>
    <string name="behance_read_search">검색</string>
    <string name="behance_read_tv">티비</string>
    <string name="behance_read_alarm">알람</string>
    <string name="behance_read_my">프로필</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- BehanceCreateActivity -->
    <string name="create_re_organization">재정리</string>
    <string name="create_next">다음</string>
    <string name="create_tool_info">아래 툴을 사용하여 내  프로젝트에\n콘텐츠를 추가할 수 있습니다.</string>
    <string name="create_project_start">프로젝트 시작</string>
    <string name="create_project_post">게시</string>
    <string name="create_project_title_hint">* 프로젝트 이름 지정</string>
</resources>