<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.create.BehanceCreateActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_create_top"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/white"
                android:elevation="3dp"
                android:fitsSystemWindows="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/btn_create_back"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:background="@android:color/transparent"
                    android:paddingHorizontal="4dp"
                    android:paddingTop="25dp"
                    android:paddingBottom="18dp"
                    android:src="@drawable/ic_create_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_create_next"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="18dp"
                    android:fontFamily="@font/noto_sans_regular"
                    android:lineSpacingExtra="8sp"
                    android:paddingTop="22dp"
                    android:paddingBottom="14dp"
                    android:text="@string/create_next"
                    android:textColor="@color/bgray"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_create_re_organization"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/noto_sans_regular"
                    android:lineSpacingExtra="8sp"
                    android:paddingTop="22dp"
                    android:paddingBottom="14dp"
                    android:text="@string/create_re_organization"
                    android:textColor="@color/bgray"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_create_next"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <ImageView
                android:id="@+id/iv_create_square"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="158dp"
                android:src="@drawable/img_create_sqaure"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_create_top" />

            <TextView
                android:id="@+id/tv_create_tool_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/create_tool_info"
                android:textAlignment="center"
                android:textAppearance="@style/TextStyle5"
                android:textColor="@color/lightgreen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_create_square" />

            <TextView
                android:id="@+id/tv_create_project_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_medium"
                android:lineSpacingExtra="8sp"
                android:text="@string/create_project_start"
                android:textColor="@color/gray_2"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_create_tool_info" />

            <ImageView
                android:id="@+id/iv_create_selected_photo"
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



        <FrameLayout
            android:id="@+id/layout_create_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:elevation="3dp"
            app:behavior_fitToContents="false"
            app:behavior_halfExpandedRatio="0.5"
            app:behavior_hideable="false"
            app:behavior_peekHeight="49dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_create_icon_list"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:orientation="horizontal"
                app:layout_anchor="@+id/layout_create_bottom_sheet"
                app:layout_anchorGravity="center">

                <ImageButton
                    android:id="@+id/btn_create_cloud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:background="@null"
                    android:src="@drawable/ic_create_cloud"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_create_camera"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/btn_create_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/ic_create_camera"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_create_text"
                    app:layout_constraintStart_toEndOf="@id/btn_create_cloud"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/btn_create_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/ic_create_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_create_blank"
                    app:layout_constraintStart_toEndOf="@id/btn_create_camera"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/btn_create_blank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="33dp"
                    android:background="@null"
                    android:src="@drawable/ic_create_blank"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_create_text"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_create_gallery"
                    android:background="@color/gray_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </FrameLayout>



    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>